--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         Cheese
                     </label>
                 </div>
-             31900   <div class="main__product-kcall"><span>0</span> calories</div> <!-- kaloriylar summasi -->
+            <div class="main__product-kcall"><span>0</span> calories</div> <!-- kaloriylar summasi -->
 
             </section>
             <section class="main__product" id="freshCombo">
@@ -139,7 +139,7 @@
                         <img src="images/product3.jpg" alt="" class="main__product-img">
                         <h2 class="main__product-title">FRESH COMBO <span class="main__product-many">35500 sum</span>
                         </h2>
-31900
+
                     </div>
                     <p class="main__product-descr">
                         FRESH and POTATO. Exact same FRESH, but now with potatoes.
